feat: add whitelist CRUD
